...
                    food: food,
                    amount: $amount,
                    isError: isError,
                    isFocused: $isFocused
                )
                ActionButton(
                    text: "¡Calcular Equivalencias!",
                    onClick: {
                        if isValidFoodAmount(amount) {
                            isError = false
                            onCalculateClick(
                                food.id,
                                amount.replacingOccurrences(of: ",", with: ".")
...
                    id: 3,
                    name: "Grasas",
                    conversionFactor: 50.0
                ),
                unit: UnitVo(
                    id: 1,
                    name: "gr."
                )
            ),
            isValidFoodAmount: { _ in true },
            onCalculateClick: { _, _ in }
        )
    }
...
