...
            units.id = 3
            units.name = "unidades"

            // Foods
            let blueberries = FoodEntity(context: backgroundContext)
            blueberries.id = 1
            blueberries.name = "Arándanos"
            blueberries.iconName = "blueberryIcon"
            blueberries.standardAmount = 120.0
            blueberries.category = fruits
            blueberries.unit = grams

            let cherries = FoodEntity(context: backgroundContext)
...
